# lib/api-spec/openapi.yaml
@@ -411,6 +411,10 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/CheckoutLineItem"
+        firstName:
+          type: string
+        lastName:
+          type: string
       required:
         - items
 
